refactored gsap animations logic for the menu and stablished a method that prevents the animation overlapping

--- a/src/index.css
+++ b/src/index.css
@@ -213,7 +213,4 @@
   transition-delay: 0.105s;
 }
 
-.letter:nth-child(9) {
-  transition-delay: 0.12s;
-}
 /* #943636 red */
